fix: bias negative operator

--- a/src/ml.ipynb
+++ b/src/ml.ipynb
@@ -34,7 +34,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 47,
       "metadata": {
         "id": "jZJU5W_4LfHB"
       },
@@ -86,7 +86,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 50,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -129,34 +129,34 @@
         "X_test = scaler.transform(X_test)\n",
         "\n",
         "# Turn up tolerance for faster convergence\n",
-        "clf = LogisticRegression(C=50.0 / train_samples, penalty=\"l1\", solver=\"saga\", tol=0.1)\n",
-        "clf.fit(X_train, y_train)\n",
-        "sparsity = np.mean(clf.coef_ == 0) * 100\n",
-        "score = clf.score(X_test, y_test)\n",
-        "# print('Best C % .4f' % clf.C_)\n",
-        "print(\"Sparsity with L1 penalty: %.2f%%\" % sparsity)\n",
-        "print(\"Test score with L1 penalty: %.4f\" % score)\n",
+        "# clf = LogisticRegression(C=50.0 / train_samples, penalty=\"l1\", solver=\"saga\", tol=0.1)\n",
+        "# clf.fit(X_train, y_train)\n",
+        "# sparsity = np.mean(clf.coef_ == 0) * 100\n",
+        "# score = clf.score(X_test, y_test)\n",
+        "# # print('Best C % .4f' % clf.C_)\n",
+        "# print(\"Sparsity with L1 penalty: %.2f%%\" % sparsity)\n",
+        "# print(\"Test score with L1 penalty: %.4f\" % score)\n",
         "\n",
-        "coef = clf.coef_.copy()\n",
-        "plt.figure(figsize=(10, 5))\n",
-        "scale = np.abs(coef).max()\n",
-        "for k in range(10):\n",
-        "    l1_plot = plt.subplot(2, 5, k + 1)\n",
-        "    l1_plot.imshow(\n",
-        "        coef[k].reshape(28, 28),\n",
-        "        interpolation=\"nearest\",\n",
-        "        cmap=plt.cm.RdBu,\n",
-        "        vmin=-scale,\n",
-        "        vmax=scale,\n",
-        "    )\n",
-        "    l1_plot.set_xticks(())\n",
-        "    l1_plot.set_yticks(())\n",
-        "    l1_plot.set_xlabel(\"Class %i\" % k)\n",
-        "plt.suptitle(\"Classification vector for...\")\n",
+        "# coef = clf.coef_.copy()\n",
+        "# plt.figure(figsize=(10, 5))\n",
+        "# scale = np.abs(coef).max()\n",
+        "# for k in range(10):\n",
+        "#     l1_plot = plt.subplot(2, 5, k + 1)\n",
+        "#     l1_plot.imshow(\n",
+        "#         coef[k].reshape(28, 28),\n",
+        "#         interpolation=\"nearest\",\n",
+        "#         cmap=plt.cm.RdBu,\n",
+        "#         vmin=-scale,\n",
+        "#         vmax=scale,\n",
+        "#     )\n",
+        "#     l1_plot.set_xticks(())\n",
+        "#     l1_plot.set_yticks(())\n",
+        "#     l1_plot.set_xlabel(\"Class %i\" % k)\n",
+        "# plt.suptitle(\"Classification vector for...\")\n",
         "\n",
-        "run_time = time.time() - t0\n",
-        "print(\"Example run in %.3f s\" % run_time)\n",
-        "plt.show()"
+        "# run_time = time.time() - t0\n",
+        "# print(\"Example run in %.3f s\" % run_time)\n",
+        "# plt.show()"
       ]
     },
     {
@@ -168,7 +168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 49,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -393,26 +393,11 @@
         "        elif func == 'binary_cross_entropy': return FFNNClassifier.binary_cross_entropy(y_act, y_pred)\n",
         "        elif func == 'categorical_cross_entropy': return FFNNClassifier.categorical_cross_entropy(y_act, y_pred, number_of_classes)\n",
         "    def mean_squared_error(y_act, y_pred):\n",
-        "        return 2/len(y_act) * (y_act - y_pred)\n",
-        "        res = 0\n",
-        "        n = len(y_act)\n",
-        "        for i in range(n):\n",
-        "            minus = y_act - y_pred\n",
-        "            res += minus*minus\n",
-        "        return res/n\n",
+        "        return 2/len(y_act) * (y_pred - y_act)\n",
         "    def binary_cross_entropy(y_act, y_pred, n):\n",
-        "        res = 0\n",
-        "        n = len(y_act)\n",
-        "        for i in range(n):\n",
-        "            res += y_act*np.log(y_pred) + (1-y_act)*np.log(1-y_pred)\n",
-        "        return -res/n\n",
+        "        return (y_pred - y_act)/(y_pred*(1 - y_pred))\n",
         "    def categorical_cross_entropy(y_act, y_pred, c):\n",
-        "        res = 0\n",
-        "        n = len(y_act)\n",
-        "        for i in range(n):\n",
-        "            for j in range(c):\n",
-        "                res += y_act[i][j]*np.log(y_pred[i][j])\n",
-        "        return -res/n\n",
+        "        return y_pred - y_act\n",
         "\n",
         "# endregion functions\n",
         "\n",
@@ -526,22 +511,24 @@
         "                weight_gradiens = np.zeros_like(self.weights_history[-1])\n",
         "                bias_gradiens = np.zeros_like(self.biases_history[-1])\n",
         "\n",
-        "                weight_gradiens[network_depth-2] = np.dot(nodes_active[-2].T, delta) # cant use dot because its 1D array and numpy cant seem to transpose it\n",
-        "                bias_gradiens[network_depth-2] = delta\n",
+        "                weight_gradiens[network_depth-2] = np.dot(nodes_active[-2].T, -delta) # cant use dot because its 1D array and numpy cant seem to transpose it\n",
+        "                bias_gradiens[network_depth-2] = -delta\n",
         "                \n",
         "                for k in range(network_depth-2, 0, -1): # from the last hidden layer (not including the output layer)\n",
         "                    w = self.weights_history[-1][k]\n",
         "                    delta = np.dot(delta, w.T) * self._activation_derived_function(nodes[k], self.activation_func)\n",
-        "                    weight_gradiens[network_depth-2-k] = np.outer(nodes_active[k-1].T, delta)\n",
-        "                    bias_gradiens[network_depth-2-k] = delta\n",
+        "                    weight_gradiens[network_depth-2-k] = np.outer(nodes_active[k-1].T, -delta)\n",
+        "                    bias_gradiens[network_depth-2-k] = -delta\n",
         "                \n",
         "                self.weight_gradients_history.append(weight_gradiens)\n",
         "                \n",
         "                # Update\n",
         "                for k in range(network_depth-1):\n",
         "                    w_k = self.weights_history[-1][k]\n",
+        "                    b_k = self.biases_history[-1][k]\n",
         "                    weights[k] = w_k + self.learning_rate * weight_gradiens[k]\n",
-        "                    biases[k] = w_k - self.learning_rate * bias_gradiens[k]\n",
+        "\n",
+        "                    biases[k] = b_k + self.learning_rate * bias_gradiens[k]\n",
         "                self.weights_history.append(weights)\n",
         "                self.biases_history.append(biases)\n",
         "\n",
@@ -567,8 +554,9 @@
         "            for k in range(len_layer):\n",
         "                w_k = self.weights_history[-1][k]\n",
         "                b_k = self.biases_history[-1][k]\n",
+        "                b_k_broadcasted = b_k[:, np.newaxis]\n",
         "\n",
-        "                a_k = b_k + np.dot(w_k, X)\n",
+        "                a_k = b_k_broadcasted + np.dot(w_k, X)\n",
         "                X = self._activation_function(a_k, self.activation_func)\n",
         "            \n",
         "            predicted_class = np.argmax(X) # idx with highest value. idx is also the class\n",
@@ -587,30 +575,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 76,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "nodes_active[0].shape: (1, 2)\n",
-            "nodes_active[0]: [[0.05 0.1 ]]\n",
-            "nodes_active[-1] [[0.75136507 0.77292847]]\n",
-            "nodes[-1] [[1.10590597 1.2249214 ]]\n",
-            "nodes[-1].T [[1.10590597]\n",
-            " [1.2249214 ]]\n",
-            "delta [[-0.13849856  0.03809824]]\n",
-            "network_depth-2: 1\n",
-            "bias_gradiens.shape: (2, 2)\n",
-            "bias_gradiens[0].shape: (2,)\n",
-            "bias_gradiens[1].shape: (2,)\n",
-            "bias_gradiens[network_depth-2].shape: (2,)\n",
-            "bias_gradiens[network_depth-2]: [0. 0.]\n",
+            "loss_grad [[ 0.74136507 -0.21707153]]\n",
+            "self._activation_derived_function(nodes[-1], self.activation_func) [[0.1868156  0.17551005]]\n",
             "Epoch 1/1 done\n",
             "Final Weights: [array([[0.14978072, 0.24975114],\n",
             "       [0.19956143, 0.29950229]]), array([[0.35891648, 0.51130127],\n",
-            "       [0.40866619, 0.56137012]])]\n"
+            "       [0.40866619, 0.56137012]])]\n",
+            "Final Biases: [array([0.34561432, 0.34502287]), array([0.53075072, 0.61904912])]\n"
           ]
         }
       ],
@@ -629,26 +607,40 @@
         "X_temp = np.array([[0.05, 0.1]])\n",
         "y_temp = np.array([0.01, 0.99])\n",
         "ffnn.fit(X_temp, y_temp)\n",
-        "prediction = ffnn.predict(X_temp)\n",
+        "# prediction = ffnn.predict(X_temp)\n",
         "# print(prediction)\n",
         "\n",
-        "print(\"Final Weights:\", ffnn.weights_history[-1])"
+        "print(\"Final Weights:\", ffnn.weights_history[-1])\n",
+        "print(\"Final Biases:\", ffnn.biases_history[-1])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 60,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "ValueError",
+          "evalue": "shapes (2,2) and (784,10) not aligned: 2 (dim 1) != 784 (dim 0)",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[60]\u001b[39m\u001b[32m, line 10\u001b[39m\n\u001b[32m      1\u001b[39m ffnn = FFNNClassifier(\n\u001b[32m      2\u001b[39m     hidden_layer_sizes=(\u001b[32m64\u001b[39m, \u001b[32m64\u001b[39m),\n\u001b[32m      3\u001b[39m     activation_func=\u001b[33m\"\u001b[39m\u001b[33mrelu\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m   (...)\u001b[39m\u001b[32m      8\u001b[39m     loss_func=\u001b[33m\"\u001b[39m\u001b[33mmean_squared_error\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      9\u001b[39m )\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m \u001b[43mffnn\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_train\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     11\u001b[39m prediction = ffnn.predict(X_test)\n\u001b[32m     12\u001b[39m visualize(X_test, prediction, \u001b[32m10\u001b[39m, \u001b[32m10\u001b[39m)\n",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[59]\u001b[39m\u001b[32m, line 181\u001b[39m, in \u001b[36mFFNNClassifier.fit\u001b[39m\u001b[34m(self, X, y)\u001b[39m\n\u001b[32m    177\u001b[39m h_k_min_1 = nodes_active[k-\u001b[32m1\u001b[39m]\n\u001b[32m    179\u001b[39m b_k_broadcasted = b_k[:, np.newaxis] \u001b[38;5;66;03m# copy the bias for each row in the matrix\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m181\u001b[39m a_k = b_k_broadcasted + \u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mw_k\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mh_k_min_1\u001b[49m\u001b[43m.\u001b[49m\u001b[43mT\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    182\u001b[39m nodes[k] = a_k.T\n\u001b[32m    183\u001b[39m nodes_active[k] = \u001b[38;5;28mself\u001b[39m._activation_function(a_k, \u001b[38;5;28mself\u001b[39m.activation_func).T\n",
+            "\u001b[31mValueError\u001b[39m: shapes (2,2) and (784,10) not aligned: 2 (dim 1) != 784 (dim 0)"
+          ]
+        }
+      ],
       "source": [
         "ffnn = FFNNClassifier(\n",
         "    hidden_layer_sizes=(64, 64),\n",
         "    activation_func=\"relu\",\n",
         "    learning_rate=0.5,\n",
-        "    max_epoch=20,\n",
         "    verbose=0,\n",
         "    max_epoch=5,\n",
-        "    batch_size=10\n",
+        "    batch_size=10,\n",
+        "    loss_func=\"mean_squared_error\"\n",
         ")\n",
         "ffnn.fit(X_train, y_train)\n",
         "prediction = ffnn.predict(X_test)\n",
