fix: case with misaligned shape

--- a/src/ml.ipynb
+++ b/src/ml.ipynb
@@ -347,17 +347,17 @@
         "    def _generate_initial_weights(self):\n",
         "        \n",
         "        # delete this\n",
-        "        # weights, nodes, nodes_active, biases = self._generate_new_empty_layers()\n",
-        "        # return weights\n",
-        "        return [np.array([[0.15, 0.25], [0.2, 0.3]]), np.array([[0.4, 0.5], [0.45, 0.55]])]\n",
+        "        weights, nodes, nodes_active, biases = self._generate_new_empty_layers()\n",
+        "        return weights\n",
+        "        # return [np.array([[0.15, 0.25], [0.2, 0.3]]), np.array([[0.4, 0.5], [0.45, 0.55]])]\n",
         "    \n",
         "    # return [ float, float, float ... ] where float is the bias for each layer. length should be number of layers - 1 because input layer does not have bias\n",
         "    def _generate_initial_biases(self):\n",
         "        \n",
         "        # delete this\n",
-        "        # weights, nodes, nodes_active, biases = self._generate_new_empty_layers()\n",
-        "        # return biases\n",
-        "        return [np.array([0.35, 0.35]), np.array([0.6, 0.6])]\n",
+        "        weights, nodes, nodes_active, biases = self._generate_new_empty_layers()\n",
+        "        return biases\n",
+        "        # return [np.array([0.35, 0.35]), np.array([0.6, 0.6])]\n",
         "        \n",
         "\n",
         "# region functions\n",
@@ -378,13 +378,15 @@
         "            sig = self._activation_function(x, 'sigmoid')\n",
         "            return sig * (1 - sig)\n",
         "        elif func == 'tanh': \n",
-        "            p = 2.0/(np.exp(x) - np.exp(-x))\n",
+        "            p = 2.0/(np.exp(x) - np.exp(-x)) # should be the same as 1 - np.tanh(x) ** 2. will check later\n",
         "            return p*p\n",
         "        elif func == 'softmax': # TODO: Check if this implementation is correct\n",
         "            delta = np.zeros_like(x) \n",
         "            for i in range(x.shape[0]): delta[i, i] = 1\n",
         "            softmax = self._activation_function(x, 'softmax')\n",
         "            return softmax*(delta-softmax) \n",
+        "            # s = self._activation_function(x, 'softmax')\n",
+        "            # return s * (1 - s)\n",
         "        raise \"Activation function not supported!\"\n",
         "    \n",
         "\n",
@@ -393,7 +395,7 @@
         "        elif func == 'binary_cross_entropy': return FFNNClassifier.binary_cross_entropy(y_act, y_pred)\n",
         "        elif func == 'categorical_cross_entropy': return FFNNClassifier.categorical_cross_entropy(y_act, y_pred, number_of_classes)\n",
         "    def mean_squared_error(y_act, y_pred):\n",
-        "        return 2/len(y_act) * (y_pred - y_act)\n",
+        "        return 2/len(y_act[0]) * (y_pred - y_act)\n",
         "    def binary_cross_entropy(y_act, y_pred, n):\n",
         "        return (y_pred - y_act)/(y_pred*(1 - y_pred))\n",
         "    def categorical_cross_entropy(y_act, y_pred, c):\n",
@@ -406,12 +408,6 @@
         "    \n",
         "    # Can only be called after setting X and y\n",
         "    def _get_hidden_layer_sizes(self) -> np.typing.NDArray:\n",
-        "        if len(self.X) == 0:\n",
-        "            raise \"len(self.X) == 0\"\n",
-        "        if len(self.X[0]) == 0:\n",
-        "            raise \"len(self.X[0]) == 0\"\n",
-        "        if len(self.y) == 0:\n",
-        "            raise \"len(self.y) == 0\"\n",
         "        \n",
         "        len_features = len(self.X[0])\n",
         "        len_classes = self._get_number_of_classes()\n",
@@ -425,12 +421,6 @@
         "    \n",
         "    # Can only be called after setting X and y\n",
         "    def _generate_new_empty_layers(self):\n",
-        "        if len(self.X) == 0:\n",
-        "            raise \"len(self.X) == 0\"\n",
-        "        if len(self.X[0]) == 0:\n",
-        "            raise \"len(self.X[0]) == 0\"\n",
-        "        if len(self.y) == 0:\n",
-        "            raise \"len(self.y) == 0\"\n",
         "        \n",
         "        layer_sizes = self._get_hidden_layer_sizes()\n",
         "        network_depth = len(layer_sizes)\n",
@@ -452,9 +442,21 @@
         "    def _get_number_of_classes(self):\n",
         "        return len(np.unique(self.y))\n",
         "    \n",
+        "    def copy_list_as_zeros(self, list: list[NDArray]):\n",
+        "        return [np.zeros_like(w) for w in list]\n",
+        "    \n",
         "# endregion getters setters\n",
         "\n",
         "    def fit(self, X: NDArray, y: NDArray):\n",
+        "        if len(X) != len(y):\n",
+        "            raise Exception(\"length of X and y is not the same\")\n",
+        "        if len(X) == 0:\n",
+        "            raise Exception(\"len(self.X) == 0\")\n",
+        "        if len(X[0]) == 0:\n",
+        "            raise Exception(\"len(self.X[0]) == 0\")\n",
+        "        if len(y) == 0:\n",
+        "            raise Exception(\"len(self.y) == 0\")\n",
+        "        \n",
         "        # clean up in case this function is called multiple times\n",
         "        self.X: NDArray = []\n",
         "        self.y: ArrayLike = []\n",
@@ -488,18 +490,17 @@
         "                nodes_active[0] = self.X[current_dataset_idx:until_idx] # not passed to activation function for the first layer\n",
         "                \n",
         "                for k in range(1, network_depth):\n",
-        "                    w_k = self.weights_history[-1][k-1].T\n",
+        "                    w_k = self.weights_history[-1][k-1]\n",
         "                    b_k = self.biases_history[-1][k-1]\n",
         "                    h_k_min_1 = nodes_active[k-1]\n",
         "\n",
-        "                    b_k_broadcasted = b_k[:, np.newaxis] # copy the bias for each row in the matrix\n",
+        "                    a_k = b_k + np.dot(h_k_min_1, w_k) # numpy will automatically broadcast b_k (row will be copied to match the result from dot) so that this is addable\n",
         "\n",
-        "                    a_k = b_k_broadcasted + np.dot(w_k, h_k_min_1.T)\n",
-        "                    nodes[k] = a_k.T\n",
-        "                    nodes_active[k] = self._activation_function(a_k, self.activation_func).T\n",
-        "\n",
+        "                    nodes[k] = a_k\n",
+        "                    nodes_active[k] = self._activation_function(a_k, self.activation_func)\n",
+        "                \n",
         "                loss_grad = self._loss_function(\n",
-        "                    y_act=self.y, \n",
+        "                    y_act=self.y[current_dataset_idx:until_idx], \n",
         "                    y_pred=nodes_active[network_depth-1], \n",
         "                    number_of_classes=number_of_classes, \n",
         "                    func=self.loss_func\n",
@@ -507,25 +508,30 @@
         "\n",
         "\n",
         "                # Backward Propagation\n",
+        "                weight_gradiens = [0 for i in range(len(self.weights_history[-1]))] # 0 will be replaced with numpy.array\n",
+        "                bias_gradiens = [0 for i in range(len(self.biases_history[-1]))] # 0 will be replaced with numpy.array\n",
+        "                \n",
         "                delta = loss_grad * self._activation_derived_function(nodes[-1], self.activation_func)\n",
-        "                weight_gradiens = np.zeros_like(self.weights_history[-1])\n",
-        "                bias_gradiens = np.zeros_like(self.biases_history[-1])\n",
         "\n",
-        "                weight_gradiens[network_depth-2] = np.dot(nodes_active[-2].T, -delta) # cant use dot because its 1D array and numpy cant seem to transpose it\n",
+        "                weight_gradiens[network_depth-2] = np.dot(nodes_active[-2].T, -delta)\n",
         "                bias_gradiens[network_depth-2] = -delta\n",
         "                \n",
         "                for k in range(network_depth-2, 0, -1): # from the last hidden layer (not including the output layer)\n",
         "                    w = self.weights_history[-1][k]\n",
+        "\n",
         "                    delta = np.dot(delta, w.T) * self._activation_derived_function(nodes[k], self.activation_func)\n",
-        "                    weight_gradiens[network_depth-2-k] = np.outer(nodes_active[k-1].T, -delta)\n",
+        "\n",
+        "                    weight_gradiens[network_depth-2-k] = np.dot(nodes_active[k-1].T, -delta)\n",
         "                    bias_gradiens[network_depth-2-k] = -delta\n",
         "                \n",
         "                self.weight_gradients_history.append(weight_gradiens)\n",
         "                \n",
+        "\n",
         "                # Update\n",
         "                for k in range(network_depth-1):\n",
         "                    w_k = self.weights_history[-1][k]\n",
         "                    b_k = self.biases_history[-1][k]\n",
+        "\n",
         "                    weights[k] = w_k + self.learning_rate * weight_gradiens[k]\n",
         "\n",
         "                    biases[k] = b_k + self.learning_rate * bias_gradiens[k]\n",
@@ -547,55 +553,54 @@
         "\n",
         "\n",
         "    def predict(self, X_test: NDArray):\n",
-        "        prediction = np.zeros(len(X_test))\n",
-        "        for i in range(len(X_test)):\n",
-        "            X = X_test[i]\n",
-        "            len_layer = len(self.weights_history[-1])\n",
-        "            for k in range(len_layer):\n",
-        "                w_k = self.weights_history[-1][k]\n",
-        "                b_k = self.biases_history[-1][k]\n",
-        "                b_k_broadcasted = b_k[:, np.newaxis]\n",
+        "        prediction = [-1 for i in range(len(X_test))]\n",
+        "        current_idx = 0\n",
+        "        while current_idx < len(X_test):\n",
+        "            weights, nodes, nodes_active, biases = self._generate_new_empty_layers()\n",
+        "            until_idx = min(current_idx+self.batch_size, len(X_test))\n",
+        "            nodes[0] = X_test[current_idx:until_idx]\n",
+        "            nodes_active[0] = X_test[current_idx:until_idx]\n",
         "\n",
-        "                a_k = b_k_broadcasted + np.dot(w_k, X)\n",
-        "                X = self._activation_function(a_k, self.activation_func)\n",
+        "            for k in range(1, len(self.weights_history[-1])+1):\n",
+        "                w_k = self.weights_history[-1][k-1]\n",
+        "                b_k = self.biases_history[-1][k-1]\n",
+        "                h_k_min_1 = nodes_active[k-1]\n",
+        "\n",
+        "                a_k = b_k + np.dot(h_k_min_1, w_k)\n",
+        "\n",
+        "                nodes[k] = a_k\n",
+        "                nodes_active[k] = self._activation_function(a_k, self.activation_func)\n",
         "            \n",
-        "            predicted_class = np.argmax(X) # idx with highest value. idx is also the class\n",
-        "            prediction[i] = predicted_class\n",
+        "            predicted_class = [int(np.argmax(nodes_active[-1][i])) for i in range(len(nodes_active[-1]))] # idx with highest value. idx is also the class\n",
+        "            prediction[current_idx:until_idx] = predicted_class\n",
+        "            current_idx += self.batch_size\n",
         "            \n",
         "        return prediction\n",
-        "\n",
-        "    \n",
-        "    def predict_proba(X_test: NDArray):\n",
-        "        pass\n",
-        "\n",
-        "    def score(X_test, y_test):\n",
-        "        pass\n",
         "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 233,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "loss_grad [[ 0.74136507 -0.21707153]]\n",
-            "self._activation_derived_function(nodes[-1], self.activation_func) [[0.1868156  0.17551005]]\n",
             "Epoch 1/1 done\n",
             "Final Weights: [array([[0.14978072, 0.24975114],\n",
             "       [0.19956143, 0.29950229]]), array([[0.35891648, 0.51130127],\n",
             "       [0.40866619, 0.56137012]])]\n",
-            "Final Biases: [array([0.34561432, 0.34502287]), array([0.53075072, 0.61904912])]\n"
+            "Final Biases: [array([[0.34561432, 0.34502287]]), array([[0.53075072, 0.61904912]])]\n"
           ]
         }
       ],
       "source": [
+        "# Case edunex\n",
         "\n",
         "ffnn = FFNNClassifier(\n",
-        "    hidden_layer_sizes=[2],\n",
+        "    hidden_layer_sizes=[3],\n",
         "    activation_func=\"sigmoid\",\n",
         "    learning_rate=0.5,\n",
         "    verbose=1,\n",
@@ -603,13 +608,66 @@
         "    batch_size=1,\n",
         "    loss_func=\"mean_squared_error\"\n",
         ")\n",
+        "def _generate_initial_weights():\n",
+        "    return [np.array([[0.15, 0.25], [0.2, 0.3]]), np.array([[0.4, 0.5], [0.45, 0.55]])]\n",
+        "def _generate_initial_biases():\n",
+        "    return [np.array([0.35, 0.35]), np.array([0.6, 0.6])]\n",
+        "ffnn._generate_initial_weights = _generate_initial_weights\n",
+        "ffnn._generate_initial_biases = _generate_initial_biases\n",
         "\n",
         "X_temp = np.array([[0.05, 0.1]])\n",
-        "y_temp = np.array([0.01, 0.99])\n",
+        "y_temp = np.array([[0.01, 0.99]])\n",
         "ffnn.fit(X_temp, y_temp)\n",
         "# prediction = ffnn.predict(X_temp)\n",
         "# print(prediction)\n",
         "\n",
+        "print(\"Final Weights:\", ffnn.weights_history[-1])\n",
+        "print(\"Final Biases:\", ffnn.biases_history[-1])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 268,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/3 done\n",
+            "Epoch 2/3 done\n",
+            "Epoch 3/3 done\n",
+            "Prediction: [1, 1, 1, 1]\n",
+            "Final Weights: [array([[0.00179266, 0.00179266, 0.00179266],\n",
+            "       [0.00358531, 0.00358531, 0.00358531],\n",
+            "       [0.00717063, 0.00717063, 0.00717063],\n",
+            "       [0.00896329, 0.00896329, 0.00896329]]), array([[-0.29475316,  0.29475316],\n",
+            "       [-0.29475316,  0.29475316],\n",
+            "       [-0.29475316,  0.29475316]])]\n",
+            "Final Biases: [array([[0.01792657, 0.01792657, 0.01792657],\n",
+            "       [0.01792657, 0.01792657, 0.01792657]]), array([[-0.29404099,  0.29404099],\n",
+            "       [-0.29404099,  0.29404099]])]\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Case random\n",
+        "\n",
+        "ffnn = FFNNClassifier(\n",
+        "    hidden_layer_sizes=[3],\n",
+        "    activation_func=\"sigmoid\",\n",
+        "    learning_rate=0.5,\n",
+        "    verbose=1,\n",
+        "    max_epoch=3,\n",
+        "    batch_size=2,\n",
+        "    loss_func=\"mean_squared_error\"\n",
+        ")\n",
+        "\n",
+        "X_temp = np.array([[0.05, 0.1, 0.2, 0.25], [0.05, 0.1, 0.2, 0.25], [0.05, 0.1, 0.2, 0.25], [0.05, 0.1, 0.2, 0.25]])\n",
+        "y_temp = np.array([[0.01, 0.99], [0.01, 0.99], [0.01, 0.99], [0.01, 0.99]])\n",
+        "ffnn.fit(X_temp, y_temp)\n",
+        "prediction = ffnn.predict(X_temp)\n",
+        "print(\"Prediction:\", prediction)\n",
         "print(\"Final Weights:\", ffnn.weights_history[-1])\n",
         "print(\"Final Biases:\", ffnn.biases_history[-1])"
       ]
