chore: auto input converter when target is list instead of list of tuple

--- a/src/ml.ipynb
+++ b/src/ml.ipynb
@@ -310,7 +310,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 326,
+      "execution_count": 351,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -447,7 +447,14 @@
         "    \n",
         "# endregion getters setters\n",
         "\n",
+        "    \n",
+        "\n",
         "    def fit(self, X: NDArray, y: NDArray):\n",
+        "        if type(y) == list and type(y[0]) != list:\n",
+        "            y = np.array([[i] for i in y])\n",
+        "        if type(y) == list and type(y[0]) == list:\n",
+        "            y = np.array(y)\n",
+        "\n",
         "        if len(X) != len(y):\n",
         "            raise Exception(\"length of X and y is not the same\")\n",
         "        if len(X) == 0:\n",
@@ -627,7 +634,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 329,
+      "execution_count": 352,
       "metadata": {},
       "outputs": [
         {
